# pygame_recorder

./: LICENSE  README.md  pygame_recorder.py  setup.cfg
pygame_recorder/: __init__.py  pygame_recorder.py
