[metadata]
name = pygame_recorder
version = 0.0.1
author = tdrmk
description = Simple project which implements screen recording functionality for pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcranney/pygame_recorder
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
	numpy
	opencv-python
	pygame
include_package_data = True